# the-axelrod-tournament

./: .gitignore  README.md  pyproject.toml  ruff.toml
notebooks/: strategies.ipynb
tat/: __init__.py
