# pyproject.toml

[tool.poetry]
name = "the-axelrod-tournament"
version = "0.1.0"
description = "https://axelrod.vicenteaguero.com/"
authors = ["Vicente Agüero <vicenteaguero@uc.cl>"]
packages = [
    { include = "tat", from = "." },
]

[tool.poetry.dependencies]
python = "^3.10"
matplotlib = "^3.10.0"
numpy = "^2.2.2"
pandas = "^2.2.3"
tqdm = "^4.67.1"

[tool.poetry.group.dev.dependencies]
ruff = "*"
black = "^23.7.0"
isort = "^5.10.1"
pytest = "^8.3.4"
ipykernel = "^6.29.5"

[tool.black]
line-length = 100
skip-string-normalization = true

[tool.isort]
profile = "black"
line_length = 100

[tool.pytest.ini_options]
python_files = ["*.py"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"